--- a/src/app/common/components/publisher-card/publisher-card.component.ng.scss
+++ b/src/app/common/components/publisher-card/publisher-card.component.ng.scss
@@ -72,6 +72,17 @@
           color: themed($m-textColor--primary);
         }
       }
+
+      a {
+        @include m-theme() {
+          color: themed($m-textColor--secondary);
+        }
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 
