--- a/src/app/modules/comments/thread/thread.component.ng.scss
+++ b/src/app/modules/comments/thread/thread.component.ng.scss
@@ -1,6 +1,24 @@
 @import 'defaults.scss';
 
 :host {
+  // ******************************************************
+  // ** MODAL **
+  // ******************************************************
+
+  m-activityV2__modal & {
+    .m-comments__viewMore {
+      margin-top: 0;
+    }
+  }
+
+  // ******************************************************
+  // ******************************************************
+  // ******************************************************
+  // ** DEFAULT **
+  // ******************************************************
+  // ******************************************************
+  // ******************************************************
+
   display: block;
   ::ng-deep {
     .m-comment__repliesToggle + & {
