--- a/src/app/modules/newsfeed/activity-v2/activity.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/activity.component.ng.scss
@@ -11,9 +11,9 @@
     background: themed($m-bgColor--primary);
   }
 
-  // ******************************************************
+  // *********************************************
   // ** FEED **
-  // ******************************************************
+  // *********************************************
 
   &.m-activity--isFeed {
     padding-bottom: $spacing4;
@@ -32,9 +32,9 @@
     }
   }
 
-  // ******************************************************
+  // *********************************************
   // ** FIXED HEIGHT **
-  // ******************************************************
+  // *********************************************
 
   &.m-activity--fixedHeight {
     height: 650px; // ojm fixedHeight change?
@@ -60,9 +60,9 @@
     width: 100%;
   }
 
-  // ******************************************************
+  // *********************************************
   // ** MINIMAL MODE **
-  // ******************************************************
+  // *********************************************
 
   &.m-activity--minimalMode {
     padding: 0;
@@ -82,9 +82,9 @@
     }
   }
 
-  // ******************************************************
+  // *********************************************
   // ** MODAL **
-  // ******************************************************
+  // *********************************************
 
   m-activityV2__modal & {
     padding: 0;
@@ -93,20 +93,23 @@
     }
   }
 
-  // ******************************************************
+  // *********************************************
   // ** SIDEBAR BOOST **
-  // ******************************************************
+  // *********************************************
 
   m-ads-boost & {
-    padding: $spacing5;
+    padding: 0;
+    .m-activity__top {
+      padding-top: 0;
+    }
     .m-activity__rightColumn {
       width: 100%;
     }
   }
 
-  // ******************************************************
+  // *********************************************
   // ** SINGLE **
-  // ******************************************************
+  // *********************************************
 
   m-newsfeed--single & {
     padding: 0;
@@ -129,13 +132,13 @@
     }
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // *********************************************
+  // *********************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // *********************************************
+  // *********************************************
 
   .m-activity__top {
     display: flex;
@@ -172,9 +175,9 @@
     }
   }
 
-  // ******************************************************
+  // *********************************************
   // ** AVATAR **
-  // ******************************************************
+  // *********************************************
 
   .m-activity__avatar,
   ::ng-deep m-activityV2__quote .m-activity__avatar {
