--- a/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.ng.scss
@@ -4,10 +4,23 @@
 :host {
   display: block;
 
-  // ******************************************************
+  // *********************************************
+  // ** FEED **
+  // *********************************************
+
+  .m-activity--isFeed & {
+    .m-activity__ownerBlock {
+      width: 105%;
+    }
+  }
+  // *********************************************
   // ** MINIMAL MODE **
-  // ******************************************************
+  // *********************************************
+
   &.m-activity__ownerBlock--minimalMode {
+    .m-activity__ownerBlock {
+      width: 100%;
+    }
     &.m-activity__ownerBlock--groupPost {
       .m-activityOwnerBlock__body {
         display: flex;
@@ -61,19 +74,17 @@
       display: none;
     }
   }
-  // ******************************************************
-  // ** REMIND **
-  // ******************************************************
-  // ojm
-  // todo: make displayOption 'isNarrow' to handle sidebar boosts and minimal mode
-  // and also minimal reminds?
 
-  // ******************************************************
+  // *********************************************
   // ** SIDEBAR BOOST **
-  // ******************************************************
+  // *********************************************
 
   m-ads-boost & {
+    .m-activity__ownerBlock {
+      padding: $minimalModeSpacing;
+    }
     .m-activityOwnerBlock__body {
+      display: flex;
       flex-direction: column;
       overflow: visible;
     }
@@ -86,13 +97,23 @@
     }
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // ** SINGLE POST **
+  // *********************************************
+
+  m-newsfeed--single & {
+    .m-activity__ownerBlock {
+      width: 105%;
+    }
+  }
+
+  // *********************************************
+  // *********************************************
+  // *********************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // *********************************************
+  // *********************************************
 
   .m-activity__ownerBlock {
     display: flex;
@@ -183,6 +204,10 @@
     @include m-theme() {
       color: themed($m-textColor--secondary);
     }
+  }
+
+  .m-activityOwnerBlock__username {
+    padding-left: $spacing1;
   }
 
   .m-activityOwnerBlock__dot {
