--- a/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.html
+++ b/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.html
@@ -1,4 +1,7 @@
-<div class="m-activityToolbar__actions">
+<div
+  class="m-activityToolbar__actions"
+  [ngClass]="{ 'm-activityToolbar__actions--noMetrics': !showMetrics }"
+>
   <minds-button-thumbs-up
     [object]="entity"
     [iconOnly]="service.displayOptions.showInteractions"
