--- a/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
@@ -2,9 +2,9 @@
 @import '../shared.scss';
 
 :host {
-  // ******************************************************
+  // *********************************************
   // ** FEED **
-  // ******************************************************
+  // *********************************************
 
   .m-activityToolbar__actions {
     padding-left: $feedSpacingLeft;
@@ -18,17 +18,17 @@
     }
   }
 
-  // ******************************************************
+  // *********************************************
   // ** FIXED HEIGHT **
-  // ******************************************************
+  // *********************************************
 
   .m-activity--fixedHeight & {
     z-index: 1;
   }
 
-  // ******************************************************
+  // *********************************************
   // ** SINGLE **
-  // ******************************************************
+  // *********************************************
 
   m-newsfeed--single & {
     .m-activityToolbar__actions,
@@ -45,6 +45,10 @@
     .m-activityToolbar__actions {
       padding-top: $spacing5;
       padding-bottom: $spacing7;
+
+      &.m-activityToolbar__actions--noMetrics {
+        padding-bottom: 0;
+      }
     }
     .m-activityToolbar__metrics {
       padding-top: $spacing5;
@@ -52,9 +56,9 @@
     }
   }
 
-  // ******************************************************
+  // *********************************************
   // ** MODAL **
-  // ******************************************************
+  // *********************************************
 
   m-activityV2__modal & {
     .m-activityToolbar__actions,
@@ -66,13 +70,13 @@
     }
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // *********************************************
+  // *********************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // *********************************************
+  // *********************************************
 
   @include m-theme() {
     background-color: themed($m-bgColor--primary);
