--- a/src/app/modules/newsfeed/activity-v2/views/views.component.scss
+++ b/src/app/modules/newsfeed/activity-v2/views/views.component.scss
@@ -2,20 +2,20 @@
 
 :host {
   m-sidebarwidget & {
-    // ******************************************************
+    // *********************************************
     // ** Sidebar **
-    // ******************************************************
+    // *********************************************
 
     display: none;
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // *********************************************
+  // *********************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // *********************************************
+  // *********************************************
   .m-activity__views {
     display: inline-block;
     @include body2Medium;
