--- a/src/app/modules/discovery/feeds/feed-item.component.scss
+++ b/src/app/modules/discovery/feeds/feed-item.component.scss
@@ -9,6 +9,9 @@
     padding: 20px;
   }
 
+  &.m-discovery__feedItem--activityV2 {
+    padding: 0;
+  }
   &.m-discovery__feedItem--user {
     padding-bottom: 0;
     @include m-theme() {
