--- a/src/app/modules/newsfeed/activity-v2/paywall/paywall.component.html
+++ b/src/app/modules/newsfeed/activity-v2/paywall/paywall.component.html
@@ -3,5 +3,6 @@
   [entity]="entity"
   (entityChange)="onEntityUpdated($event)"
   [mediaHeight]="mediaHeight"
+  [mediaWidth]="mediaWidth"
   [minimalMode]="service.displayOptions.minimalMode"
 ></m-wire--lock-screen>
