--- a/src/app/modules/newsfeed/activity-v2/permalink/permalink.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/permalink/permalink.component.ng.scss
@@ -4,19 +4,9 @@
 :host {
   display: inline-block;
 
-  // ******************************************************
-  // ** FEED (inside owner block) **
-  // ******************************************************
-
-  .m-activity--isFeed & {
-    .m-activityPermalink__text {
-      padding-left: $spacing2;
-    }
-  }
-
-  // ******************************************************
+  // *********************************************
   // ** MINIMAL MODE **
-  // ******************************************************
+  // *********************************************
 
   &.m-activity__permalink--minimalMode {
     padding: 0 $minimalModeSpacing $minimalModeSpacing;
@@ -29,9 +19,9 @@
     }
   }
 
-  // ******************************************************
+  // *********************************************
   // ** MODAL **
-  // ******************************************************
+  // *********************************************
 
   m-activityV2__modal & {
     .m-activityPermalink__text {
@@ -39,9 +29,9 @@
     }
   }
 
-  // ******************************************************
+  // *********************************************
   // ** SINGLE **
-  // ******************************************************
+  // *********************************************
 
   m-newsfeed--single & {
     .m-activityPermalink__text {
@@ -49,13 +39,13 @@
     }
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // *********************************************
+  // *********************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // *********************************************
+  // *********************************************
+  // *********************************************
   .m-activityPermalink__wrapper {
     text-decoration: none;
 
